libs/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_02.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "&pool"
snapshot_kind: text
---
Pool {
    root: Some(
        Node {
            addr: "ffffffffffffff00 (1111111111111111111111111111111111111111111111111111111100000000)",
            mask: "ffffffffffffff00 (1111111111111111111111111111111111111111111111111111111100000000)",
            next: Leaf,
        },
    ),
}
