libs/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_03.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "(addr, &pool)"
snapshot_kind: text
---
(
    18446744073709551360,
    Pool {
        root: None,
    },
)
