libs/mm1-address/src/pool/snapshots/mm1_address__pool__trie__tests__pool_05.snap
---
source: crates/mm1-address/src/pool/trie.rs
expression: "(a_64, &pool)"
snapshot_kind: text
---
(
    18446744073709551615,
    Pool {
        root: None,
    },
)
